Fully working profile and scene changer

--- a/OBSSuite/Mother/pom.xml
+++ b/OBSSuite/Mother/pom.xml
@@ -64,6 +64,29 @@
             <groupId>net.twasi</groupId>
             <artifactId>obs-websocket-java</artifactId>
             <version>${OBSWebsocketJavaVersion}</version>
+
+            <exclusions>
+            <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+            </exclusion>
+            </exclusions>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty.websocket/websocket-client -->
+<dependency>
+    <groupId>org.eclipse.jetty.websocket</groupId>
+    <artifactId>websocket-client</artifactId>
+    <version>9.4.35.v20201120</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.6</version>
+</dependency>
+
+
     </dependencies>
 </project>
