--- a/OBSSuite/SetCurrentScene/pom.xml
+++ b/OBSSuite/SetCurrentScene/pom.xml
@@ -39,7 +39,7 @@
     <properties>
         <ActionAPIVersion>1.0.0</ActionAPIVersion>
         <UtilVersion>1.0.0</UtilVersion>
-     
+        <OBSSuiteMotherVersion>1.0.0</OBSSuiteMotherVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -59,10 +59,10 @@
             <version>${ActionAPIVersion}</version>
         </dependency>
 
-          <dependency>
+        <dependency>
             <groupId>com.StreamPi</groupId>
             <artifactId>OBSSuite-Mother</artifactId>
-            <version>1.0.0</version>
+            <version>${OBSSuiteMotherVersion}</version>
         </dependency>
     </dependencies>
 </project>
