--- a/OBSSuite/SetReplayBuffer/pom.xml
+++ b/OBSSuite/SetReplayBuffer/pom.xml
@@ -39,7 +39,8 @@
     <properties>
         <ActionAPIVersion>1.0.0</ActionAPIVersion>
         <UtilVersion>1.0.0</UtilVersion>
-     
+        <OBSSuiteMotherVersion>1.0.0</OBSSuiteMotherVersion>
+        
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -57,6 +58,12 @@
             <groupId>com.StreamPi</groupId>
             <artifactId>ActionAPI</artifactId>
             <version>${ActionAPIVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.StreamPi</groupId>
+            <artifactId>OBSSuite-Mother</artifactId>
+            <version>${OBSSuiteMotherVersion}</version>
         </dependency>
     </dependencies>
 </project>
