--- a/OBSSuite/SetRecording/pom.xml
+++ b/OBSSuite/SetRecording/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.StreamPi</groupId>
-    <artifactId>OBSSuite-Mother</artifactId>
+    <artifactId>OBSSuite-SetRecordingAction</artifactId>
     <version>1.0.0</version>
 
     <build>
@@ -39,8 +39,8 @@
     <properties>
         <ActionAPIVersion>1.0.0</ActionAPIVersion>
         <UtilVersion>1.0.0</UtilVersion>
-        <OBSWebsocketJavaVersion>1.2.0</OBSWebsocketJavaVersion>
-     
+        <OBSSuiteMotherVersion>1.0.0</OBSSuiteMotherVersion>
+        
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -61,28 +61,9 @@
         </dependency>
 
         <dependency>
-            <groupId>net.twasi</groupId>
-            <artifactId>obs-websocket-java</artifactId>
-            <version>${OBSWebsocketJavaVersion}</version>
-
-            <exclusions>
-            <exclusion>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-simple</artifactId>
-            </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-client</artifactId>
-            <version>9.4.35.v20201120</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <groupId>com.StreamPi</groupId>
+            <artifactId>OBSSuite-Mother</artifactId>
+            <version>${OBSSuiteMotherVersion}</version>
         </dependency>
     </dependencies>
 </project>
