--- a/OBSSuite/SetCurrentTransition/pom.xml
+++ b/OBSSuite/SetCurrentTransition/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.StreamPi</groupId>
-    <artifactId>OBSSuite-SetCurrentTransition</artifactId>
+    <artifactId>OBSSuite-SetCurrentTransitionAction</artifactId>
     <version>1.0.0</version>
 
     <build>
@@ -62,7 +62,7 @@
 
         <dependency>
             <groupId>com.StreamPi</groupId>
-            <artifactId>OBSSuite-Mother</artifactId>
+            <artifactId>OBSSuite-MotherAction</artifactId>
             <version>${OBSSuiteMotherVersion}</version>
         </dependency>
     </dependencies>
