Added Hotkey support for OBS, Changed Robot from AWT to JavaFX

--- a/MediaKeyAction/.gitignore
+++ b/MediaKeyAction/.gitignore
@@ -1,7 +1,9 @@
 .idea/
+MediaKeyAction.iml
 target/
-WebsiteAction.iml
-.classpath
-.factorypath
-.project
+
+
 .settings/
+.project
+.factorypath
+.classpath
