--- a/obssuite/setcurrentprofile/pom.xml
+++ b/obssuite/setcurrentprofile/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.stream_pi</groupId>
+    <groupId>com.stream-pi</groupId>
     <artifactId>obssuite_setcurrentprofileaction</artifactId>
     <version>1.0.0</version>
 
