Added support for windows media keys

--- a/DemoCustomNormalAction/pom.xml
+++ b/DemoCustomNormalAction/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.StreamPi</groupId>
+    <groupId>com.stream-pi</groupId>
     <artifactId>DemoCustomNormalAction</artifactId>
     <version>1.0.0</version>
 
@@ -37,8 +37,7 @@
     </build>
 
     <properties>
-        <ActionAPIVersion>1.0.0</ActionAPIVersion>
-        <UtilVersion>1.0.0</UtilVersion>
+        <ActionAPIVersion>1.0.0-SNAPSHOT</ActionAPIVersion>
 
         <JavaFXVersion>16-ea+6</JavaFXVersion>
 
@@ -48,11 +47,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.stream_pi</groupId>
-            <artifactId>util</artifactId>
-            <version>${UtilVersion}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -75,8 +69,8 @@
 
 
         <dependency>
-            <groupId>com.stream_pi</groupId>
-            <artifactId>action_api</artifactId>
+            <groupId>com.stream-pi</groupId>
+            <artifactId>action-api</artifactId>
             <version>${ActionAPIVersion}</version>
         </dependency>
 
