--- a/playaudioclipaction/pom.xml
+++ b/playaudioclipaction/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.stream-pi</groupId>
     <artifactId>playaudioclipaction</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
 
     <build>
         <plugins>
@@ -40,7 +40,7 @@
         <ActionAPIVersion>1.0.0-SNAPSHOT</ActionAPIVersion>
         <UtilVersion>1.0.0-SNAPSHOT</UtilVersion>
 
-        <JavaFXVersion>16-ea+6</JavaFXVersion>
+        <JavaFXVersion>16</JavaFXVersion>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
