--- a/obssuite/mother/pom.xml
+++ b/obssuite/mother/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.stream-pi</groupId>
     <artifactId>obssuite_motheraction</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.1</version>
 
     <build>
         <plugins>
@@ -40,11 +40,12 @@
         <ActionAPIVersion>1.0.0-SNAPSHOT</ActionAPIVersion>
         <UtilVersion>1.0.0-SNAPSHOT</UtilVersion>
         <OBSWebsocketJavaVersion>1.2.0</OBSWebsocketJavaVersion>
-     
+
+        <JettyWebsocketClientVersion>9.4.39.v20210325</JettyWebsocketClientVersion>
+        <GsonVersion>2.8.6</GsonVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-
     </properties>
 
     <dependencies>
@@ -69,13 +70,13 @@
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-client</artifactId>
-            <version>9.4.39.v20210325</version>
+            <version>${JettyWebsocketClientVersion}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>${GsonVersion}</version>
         </dependency>
     </dependencies>
 </project>
