--- a/openfile/pom.xml
+++ b/openfile/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.stream-pi</groupId>
-    <artifactId>VideoPlayer</artifactId>
+    <artifactId>OpenFile</artifactId>
     <version>1.0.0</version>
 
     <build>
