--- a/twitch/twitch-chat-connect/pom.xml
+++ b/twitch/twitch-chat-connect/pom.xml
@@ -13,7 +13,7 @@
     <maven.compiler.target>11</maven.compiler.target>
     <streamPiActionApiVersion>1.0.0-SNAPSHOT</streamPiActionApiVersion>
     <streamPiUtilVersion>1.0.0-SNAPSHOT</streamPiUtilVersion>
-    <javaTwirkVersion>0.6.3</javaTwirkVersion>
+    <twitchApiVersion>0.7.1</twitchApiVersion>
   </properties>
 
   <repositories>
@@ -53,9 +53,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.github.gikkman</groupId>
-      <artifactId>Java-Twirk</artifactId>
-      <version>${javaTwirkVersion}</version>
+      <groupId>com.github.j4ckofalltrades</groupId>
+      <artifactId>twitch-api-java</artifactId>
+      <version>${twitchApiVersion}</version>
     </dependency>
 
     <dependency>
