--- a/openfileaction/pom.xml
+++ b/openfileaction/pom.xml
@@ -51,4 +51,11 @@
             <version>${ActionAPIVersion}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
 </project>
