--- a/obssuite/mother/pom.xml
+++ b/obssuite/mother/pom.xml
@@ -38,7 +38,6 @@
 
     <properties>
         <ActionAPIVersion>1.0.0-SNAPSHOT</ActionAPIVersion>
-        <UtilVersion>1.0.0-SNAPSHOT</UtilVersion>
         <OBSWebsocketJavaVersion>1.2.0</OBSWebsocketJavaVersion>
 
         <JettyWebsocketClientVersion>9.4.39.v20210325</JettyWebsocketClientVersion>
@@ -49,11 +48,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.stream-pi</groupId>
-            <artifactId>util</artifactId>
-            <version>${UtilVersion}</version>
-        </dependency>
 
         <dependency>
             <groupId>com.stream-pi</groupId>
@@ -79,4 +73,11 @@
             <version>${GsonVersion}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
 </project>
