--- a/playaudioclipaction/pom.xml
+++ b/playaudioclipaction/pom.xml
@@ -38,8 +38,6 @@
 
     <properties>
         <ActionAPIVersion>1.0.0-SNAPSHOT</ActionAPIVersion>
-        <UtilVersion>1.0.0-SNAPSHOT</UtilVersion>
-
         <JavaFXVersion>16</JavaFXVersion>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -48,12 +46,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.stream-pi</groupId>
-            <artifactId>util</artifactId>
-            <version>${UtilVersion}</version>
-        </dependency>
-
         <dependency>
             <groupId>com.stream-pi</groupId>
             <artifactId>action-api</artifactId>
@@ -66,4 +58,11 @@
             <version>${JavaFXVersion}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
 </project>
