--- a/runcommandaction/pom.xml
+++ b/runcommandaction/pom.xml
@@ -38,7 +38,6 @@
 
     <properties>
         <ActionAPIVersion>1.0.0-SNAPSHOT</ActionAPIVersion>
-        <UtilVersion>1.0.0-SNAPSHOT</UtilVersion>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -48,14 +47,15 @@
     <dependencies>
         <dependency>
             <groupId>com.stream-pi</groupId>
-            <artifactId>util</artifactId>
-            <version>${UtilVersion}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.stream-pi</groupId>
             <artifactId>action-api</artifactId>
             <version>${ActionAPIVersion}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
 </project>
