--- a/twitteraction/pom.xml
+++ b/twitteraction/pom.xml
@@ -38,7 +38,6 @@
 
     <properties>
         <ActionAPIVersion>1.0.0-SNAPSHOT</ActionAPIVersion>
-        <UtilVersion>1.0.0-SNAPSHOT</UtilVersion>
 
         <Twitter4JVersion>4.0.7</Twitter4JVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -55,14 +54,15 @@
 
         <dependency>
             <groupId>com.stream-pi</groupId>
-            <artifactId>util</artifactId>
-            <version>${UtilVersion}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.stream-pi</groupId>
             <artifactId>action-api</artifactId>
             <version>${ActionAPIVersion}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+  </repositories>
 </project>
